--- a/EndlessDoors/.project
+++ b/EndlessDoors/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>RPG</name>
+	<name>EndlessDoors</name>
 	<comment></comment>
 	<projects>
 	</projects>
